gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for utils 

Most recent changes (version wise) are at the top of this file 
All the changes are usually noted in this file when they are checked
into the cvs repository.

2000-07-04  Ales Hvezda  <ahvezda@geda.seul.org>

        * configure.in: Bumped version up to 20000704

2000-02-20  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/*.txt: Added bunch of sample gmk_sym txt files by Marcus 
	  Isaksson

2000-02-19  Ales Hvezda  <ahvezda@geda.seul.org>

        * README/INSTALL: Updated files to reflect next release

	* src/*.c: Fixed all warnings (using -Wall -Werror)

2000-01-22  Matt Ettus  <matt@ettus.com>

	* src/sarlacc_sym:  Handles more cases of oddly formed pins

1999-10-16  Ales Hvezda  <ahvezda@geda.seul.org>

        * configure.in src/Makefile.am: Now searching for libgeda-config 
	  and added an include (-I) for libgeda includes (requested by Mike)

10/6/99	Moved Project Sarlacc into CVS

8/27/99 Set the program version to 19990829 to force Ales to release
        on the 29th :)

	Updated all *.c and *.h files to have the right address for the
	FSF in the copyright/licence header

7/22/99	Integrated utils directory into the new seperate build system

	Checked utils into cvs repository


----------- New seperate build system starts here -----------


5/6/99 	Added the latest gmk_sym (includes char_width.c and mk_char_tab.pl) 
        from Jerry O'Keefe

	Added char_width.c to Makefile.am, removed it from being an included
	C file in gmk_sym.c

4/9/99 	Renamed mk_sym to gmk_sym (Jerry's send a new one in)

3/30/99 Integrated Mike's latest viewlogic convert/smash code. (fixes the
	minor type with snprintf)

3/26/99 Added 8031.txt as an example file for mk_sym
	
	Put the latest version of mk_sym in place

3/25/99 #if 0'ed some code in convert_sym.c out just to make a -Wall -Werror